--- a/docroot/themes/custom/site/package.json
+++ b/docroot/themes/custom/site/package.json
@@ -10,32 +10,17 @@
   "dependencies": {
     "additional-bootstrap-colors": "^1.0.5",
     "angled-edges": "^2.0.0",
-    "axios": "^0.17.1",
     "babel-preset-es2015": "^6.24.1",
     "bootstrap-chosen": "^1.4.2",
     "bootstrap-sass": "^3.3.7",
     "boxy-concept": "^1.0.1",
-    "column-restrictor": "^1.0.0",
+    "column-restrictor": "^1.0.1",
     "content-transitions": "^1.0.4",
     "element-wrapper-link": "^1.0.0",
-    "flexy-header": "^1.0.4",
-    "flexy-layout": "^1.0.0",
-    "flexy-list": "^1.0.2",
-    "flexy-navigation": "^1.0.8",
-    "flexy-row": "^1.0.0",
-    "jquery": "^3.2.1",
-    "jquery-hoverintent": "^1.9.0",
-    "jquery-slinky": "^4.0.2",
     "js-cookie": "^2.2.0",
-    "pace-bootstrap-theme": "^1.0.1",
-    "pace-progress": "^1.0.2",
     "readable-bootstrap-breakpoints": "^1.0.2",
     "responsive-utilities": "^1.0.2",
     "sectioned": "^1.0.7",
-    "sidr": "^2.2.1",
-    "sidr-bootstrap-theme": "^1.0.1",
-    "slinky-bootstrap-theme": "^1.0.2",
-    "sticky-kit": "^1.1.3",
     "typography-breakpoints-justification": "^1.0.0",
     "typography-helper": "^1.0.5"
   },
@@ -43,19 +28,19 @@
     "babel-core": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015-rollup": "^3.0.0",
-    "browser-sync": "^2.18.13",
-    "cross-env": "^5.1.1",
+    "browser-sync": "^2.23.5",
+    "cross-env": "^5.1.3",
     "del": "^3.0.0",
     "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^4.0.0",
+    "gulp-autoprefixer": "^4.1.0",
     "gulp-babel": "^7.0.0",
     "gulp-bless": "^4.0.0",
     "gulp-concat": "^2.6.1",
-    "gulp-debug": "^3.1.0",
-    "gulp-imagemin": "^4.0.0",
-    "gulp-modernizr": "^1.0.0-alpha",
+    "gulp-debug": "^3.2.0",
+    "gulp-imagemin": "^4.1.0",
+    "gulp-modernizr": "^2.0.0",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.6.1",
-    "run-sequence": "^2.2.0"
+    "run-sequence": "^2.2.1"
   }
 }
